<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MoreActivity"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_more"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/more"
            app:navigationIcon="@drawable/ic_back"
            android:paddingLeft="@dimen/dp_6"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txt_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_10"
        android:textStyle="normal"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_settings"
        android:paddingLeft="@dimen/dp_26"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_10"
        android:drawablePadding="@dimen/dp_20"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:id="@+id/txt_rateUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/rate_us"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_star"
        android:paddingLeft="@dimen/dp_26"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_10"
        android:drawablePadding="@dimen/dp_20"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:id="@+id/txt_moreApps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_rateUs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/more_apps"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_more_apps"
        android:paddingLeft="@dimen/dp_26"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_10"
        android:drawablePadding="@dimen/dp_20"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:id="@+id/txt_shareApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_moreApps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/share_app"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_share"
        android:paddingLeft="@dimen/dp_26"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_10"
        android:drawablePadding="@dimen/dp_20"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:id="@+id/txt_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_shareApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/feedback"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_feedback"
        android:paddingLeft="@dimen/dp_26"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_10"
        android:drawablePadding="@dimen/dp_20"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:id="@+id/txt_aboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/about_us"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_about_us"
        android:paddingLeft="@dimen/dp_26"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_10"
        android:drawablePadding="@dimen/dp_20"
        android:textSize="@dimen/sp_16"/>

    <View
        android:id="@+id/view_more"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/txt_aboutUs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/light_white"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"/>


    <LinearLayout
        android:id="@+id/adsholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black">

        <LinearLayout
            android:id="@+id/adsbanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>